--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,10 +1,9 @@
-.contact {
+.login {
+    width: 100%;
+    max-width: 330px;
     padding: 15px;
-    margin: auto;
+    margin: 100px auto;
     border-radius: 12px;
     background: white;
     box-shadow: inset 9px 9px 22px #cecece, inset -9px -9px 22px #f2f2f2;
-}
-.text-area{
-    height: 200px!important;
 }
